--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.enabled=false
+
+#key depends on jwt algorithm
+app.jwt.secret=RandomSecretKey1234567890!!!RandomSecretKey1234567890!!!RandomSecretKey1234567890!!!
+#1day
+app.jwt.expiration-in-ms=86400000
+
+
+spring.main.allow-circular-references = true
