microservice communication openfeign added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,11 @@ app.jwt.expiration-in-ms=86400000
 
 
 spring.main.allow-circular-references = true
+
+service.security-secure-key-username=randomSecureKeyUsername!
+service.security-secure-key-password=randomSecureKeyPassword!
+
+course.service.url=http://localhost:3333
+purchase.service.url=http://localhost:4444
+
+
