--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
-eureka.client.enabled=false
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:6666/eureka/
 
 #key depends on jwt algorithm
 app.jwt.secret=RandomSecretKey1234567890!!!RandomSecretKey1234567890!!!RandomSecretKey1234567890!!!
@@ -25,6 +26,7 @@ spring.main.allow-circular-references = true
 service.security-secure-key-username=randomSecureKeyUsername!
 service.security-secure-key-password=randomSecureKeyPassword!
 
+## We dont need them anymore because we use Eureka.
 course.service.url=http://localhost:3333
 purchase.service.url=http://localhost:4444
 
